Site build Moderation 2

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "This is Junze Tan's Website"
+format: html
 ---
 
 This is a Quarto website created by Junze Tan for the purpose of AD688 at MET BU.
